// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`capture-meeting prompt > message with no projectId matches snapshot 1`] = `
"You are capturing action items from meeting notes. Follow these steps:

1. **Read the notes** below carefully.

2. **Extract every action item** — anything that someone committed to do, any follow-up
   question that needs answering, any decision that needs making. Be thorough; it is better
   to capture too many than too few.

3. **For each action item**, call \`task_create\` with:
   - \`name\`: a clear, specific task title (imperative, ≤ 80 chars).
   - \`projectId\`: assign to the OmniFocus inbox (no \`projectId\`).
   - \`note\`: the verbatim sentence from the notes that generated this task.
   - \`dueDate\`: if a specific date or deadline was mentioned.
   - If \`task_batch_create\` is available, use it instead to create all tasks in one call.

4. **Confirm** by listing the tasks you created (name + project).

---
### Meeting notes

Alice will write the spec."
`;

exports[`capture-meeting prompt > message with projectId matches snapshot 1`] = `
"You are capturing action items from meeting notes. Follow these steps:

1. **Read the notes** below carefully.

2. **Extract every action item** — anything that someone committed to do, any follow-up
   question that needs answering, any decision that needs making. Be thorough; it is better
   to capture too many than too few.

3. **For each action item**, call \`task_create\` with:
   - \`name\`: a clear, specific task title (imperative, ≤ 80 chars).
   - \`projectId\`: assign to the project with ID \`proj_abc123\`.
   - \`note\`: the verbatim sentence from the notes that generated this task.
   - \`dueDate\`: if a specific date or deadline was mentioned.
   - If \`task_batch_create\` is available, use it instead to create all tasks in one call.

4. **Confirm** by listing the tasks you created (name + project).

---
### Meeting notes

Alice will write the spec."
`;

exports[`daily-review prompt > message text matches snapshot 1`] = `
"You are running a daily OmniFocus review. Follow these steps in order:

1. **Load context** — read these three resources:
   - \`omnifocus://snapshot\`      (5-count orientation: inbox, overdue, due-today, flagged, review-due)
   - \`omnifocus://overdue\`       (tasks whose due date has passed, sorted oldest-first)
   - \`omnifocus://forecast/today\` (tasks due or deferred to today, plus flagged)

2. **Clear overdue** — for every task in \`overdue\`:
   - If it should be done today, leave it (it will appear in forecast/today too).
   - If it can be rescheduled, call \`task_update\` with a new \`dueDate\`.
   - If it should be dropped, call \`task_drop\` with a reason note.

3. **Plan due-today** — for every task in \`forecast/today.dueToday\`:
   - Confirm it is still relevant. If the due date should change, call \`task_update\`.
   - If it is already done, call \`task_complete\`.

4. **Decide on flagged** — for every task in \`forecast/today.flagged\`:
   - If it is genuinely today's priority, leave the flag.
   - If it should not be today, call \`task_update\` to remove the flag (\`flagged: false\`).

5. **Inbox zero** — if \`snapshot.inboxCount > 0\`, load \`omnifocus://inbox\` and process each
   task: assign to a project (\`task_update\` with \`projectId\`), add tags, or complete it.

6. **Report** — summarise what you did: counts of rescheduled, dropped, completed, and
   inbox-cleared tasks. Mention any items you left for the user to decide."
`;

exports[`inbox-triage prompt > message text matches snapshot 1`] = `
"You are running an inbox-triage pass on OmniFocus. The goal is to clear the
inbox in one user confirmation, not ten clicks. Follow these steps in order:

1. **Load the inbox** — read \`omnifocus://inbox\`. If it is empty, report
   "Inbox empty — nothing to triage" and stop.

2. **Load context** for routing decisions (one-time read; cache the results
   in your working memory for this run):
   - \`omnifocus://capabilities\` — server feature flags
   - \`project_list\` — the agent should know what projects exist before
     proposing routes
   - \`tag_list\` — same, for tag IDs

3. **Propose an assignment for every inbox task.** For each task, derive:
   - \`projectId\` — required; pick the most-likely existing project from
     step 2's listing. If no project fits well, surface that in the table
     (see step 4) and ask the user where it should go.
   - \`addTagIds\` / \`removeTagIds\` — optional; suggest tags only when
     the task name strongly implies them.
   - \`deferDate\` / \`dueDate\` — optional; only if the task name carries
     temporal intent ("by Friday", "next sprint", "after the offsite").
   - \`flagged\` — optional; \`true\` only for items that should be on
     today's plate.

4. **Present the proposals as a structured table** — one row per inbox task,
   columns: task name, proposed project, tags (added / removed), defer, due,
   flagged, and a one-sentence rationale. Format consistently. Do NOT
   collapse multiple tasks into a single row.

5. **Wait for user confirmation.** Do NOT auto-fire \`task_batch_assign\`.
   The user reviews the table and may:
   - approve the whole batch — proceed to step 6
   - approve with edits ("change task 3's project to X, drop the tag on
     task 5") — apply the edits to your proposal set, re-render the table,
     and ask again
   - reject specific items ("skip task 2, the rest look good") — drop those
     from the assignment list before proceeding

6. **Fire \`task_batch_assign\`** with the confirmed
   \`{ assignments: [...] }\` array. The tool returns
   \`{ assigned, failed }\` — both arrays carry the original-input index, so
   you can map results back to the table you presented.

7. **Report** — summarise: how many tasks landed in which projects, how
   many failed and why (the \`failed[].errorCode\` is prefixed \`move:\` or
   \`update:\` to indicate which phase failed). If any failed, ask the user
   whether to retry, skip, or hand off."
`;

exports[`perspective-author prompt > message text (no name) matches snapshot 1`] = `
"You are translating a natural-language request into a saved OmniFocus custom perspective.

User's description: "everything I could do at home, on a phone, with under 15 minutes"

Follow these steps in order. Do NOT skip the preview step — saving without a dry-run is the failure mode this flow exists to prevent.

## 1. Propose a rule tree

Translate the description into a \`PerspectiveRule[]\` tree. The shape is the same one \`perspective_create\` accepts. **If the description is genuinely ambiguous, ask exactly ONE disambiguating question and stop — do not guess.** Examples of ambiguity worth asking about:
- "nearby tasks" → nearby what? Location-based filtering is unsupported; clarify whether the user means *available* (\`actionAvailability: "available"\`) or something else.
- "due this week" → today only, or any time before Sunday?
- "high priority" → flagged, or due-soon, or both?

When the description is clear, propose the tree directly without asking.

### Rule-tree atom reference

Each atom is a single-key object. Combine atoms inside a top-level array — \`aggregation\` (\`"all"\` | \`"any"\` | \`"none"\`) controls how they combine. Use a nested \`{ aggregateType, aggregateRules }\` for compound logic.

| Atom key | Meaning |
|---|---|
| \`actionAvailability\` | \`"available"\` (not blocked, not deferred-future), \`"remaining"\` (not done), \`"completed"\`, \`"dropped"\`, \`"firstAvailable"\` |
| \`actionStatus\` | \`"flagged"\` or \`"due"\` |
| \`actionHasAllOfTags\` | \`string[]\` of tag IDs — task must carry every tag |
| \`actionHasAnyOfTags\` | \`string[]\` of tag IDs — task must carry at least one |
| \`actionHasNoProject\` | \`true\` for inbox-style filter |
| \`actionHasDueDate\` | \`true\` / \`false\` |
| \`actionHasDeferDate\` | \`true\` / \`false\` |
| \`actionIsLeaf\` | \`true\` for tasks with no children |
| \`actionIsProject\` | \`true\` to restrict to project-equivalent items |
| \`actionMatchingSearch\` | \`string[]\` substrings — searches name + note |
| \`actionWithinFocus\` | \`string[]\` of project / folder IDs — restrict to descendants |

Wrap a single atom in \`{ disabledRule: <atom> }\` to keep it in the tree but skip it during evaluation (useful when the user asks to toggle a constraint on/off).

### Common patterns

- **Available + flagged** (high-priority "actionable now" view):
  \`\`\`json
  { "aggregation": "all", "rules": [{ "actionAvailability": "available" }, { "actionStatus": "flagged" }] }
  \`\`\`
- **Inbox-only**:
  \`\`\`json
  { "aggregation": "all", "rules": [{ "actionHasNoProject": true }] }
  \`\`\`
- **At-home-or-phone, no due date, available** (the ticket's example shape):
  \`\`\`json
  {
    "aggregation": "all",
    "rules": [
      { "actionAvailability": "available" },
      { "actionHasAnyOfTags": ["<home-tag-id>", "<phone-tag-id>"] }
    ]
  }
  \`\`\`
  Resolve the tag IDs via \`tag_list\` first if you don't have them.

## 2. Preview via dry-run

Call \`perspective_evaluate_dry_run({ aggregation, rules })\` with the proposed tree. Report the count of matched tasks and 3–5 sample names. **Do not advance to step 3 if:**
- The count is 0 (the rules don't match anything — re-propose, don't save an empty view).
- The count is suspiciously broad (e.g. > 100 when the user asked for "today's actionable tasks") — re-propose with tighter constraints.

Show the agent-friendly summary inline; the user can read the count and decide.

## 3. Save on user confirm

After the user confirms the preview matches their intent, call:

\`\`\`
perspective_create({ name: "<name>", aggregation: "<all|any|none>", rules: [...] })
\`\`\`

The \`rules\` value is the same tree you passed to \`perspective_evaluate_dry_run\` — pass it verbatim, no re-validation needed. \`perspective_create\` returns \`{ id }\`; surface that id to the user so they can reference it later (\`perspective_evaluate({ perspectiveId: "<id>" })\`).

After save, call \`perspective_list\` to confirm the new perspective is visible. Report the resulting count + name + id.

## Failure modes

- **OF Pro required.** Custom perspectives need OmniFocus Pro. \`perspective_evaluate_dry_run\` and \`perspective_create\` both return \`OF_FEATURE_REQUIRES_PRO\` on Standard. Surface that to the user — they cannot save a perspective without upgrading.
- **Duplicate name.** \`perspective_create\` rejects duplicate names with a typed validation error. Either ask the user for a different name or append a disambiguator (e.g. \` - 2\`).
- **Don't save without a name.** If the user did not supply a name, ask for one before step 3 — don't invent one.

Read-only verification first; mutation only on explicit user approval."
`;

exports[`perspective-author prompt > message text (with name) matches snapshot 1`] = `
"You are translating a natural-language request into a saved OmniFocus custom perspective.

User's description: "flagged + available"

Proposed name: "Quick wins"

Follow these steps in order. Do NOT skip the preview step — saving without a dry-run is the failure mode this flow exists to prevent.

## 1. Propose a rule tree

Translate the description into a \`PerspectiveRule[]\` tree. The shape is the same one \`perspective_create\` accepts. **If the description is genuinely ambiguous, ask exactly ONE disambiguating question and stop — do not guess.** Examples of ambiguity worth asking about:
- "nearby tasks" → nearby what? Location-based filtering is unsupported; clarify whether the user means *available* (\`actionAvailability: "available"\`) or something else.
- "due this week" → today only, or any time before Sunday?
- "high priority" → flagged, or due-soon, or both?

When the description is clear, propose the tree directly without asking.

### Rule-tree atom reference

Each atom is a single-key object. Combine atoms inside a top-level array — \`aggregation\` (\`"all"\` | \`"any"\` | \`"none"\`) controls how they combine. Use a nested \`{ aggregateType, aggregateRules }\` for compound logic.

| Atom key | Meaning |
|---|---|
| \`actionAvailability\` | \`"available"\` (not blocked, not deferred-future), \`"remaining"\` (not done), \`"completed"\`, \`"dropped"\`, \`"firstAvailable"\` |
| \`actionStatus\` | \`"flagged"\` or \`"due"\` |
| \`actionHasAllOfTags\` | \`string[]\` of tag IDs — task must carry every tag |
| \`actionHasAnyOfTags\` | \`string[]\` of tag IDs — task must carry at least one |
| \`actionHasNoProject\` | \`true\` for inbox-style filter |
| \`actionHasDueDate\` | \`true\` / \`false\` |
| \`actionHasDeferDate\` | \`true\` / \`false\` |
| \`actionIsLeaf\` | \`true\` for tasks with no children |
| \`actionIsProject\` | \`true\` to restrict to project-equivalent items |
| \`actionMatchingSearch\` | \`string[]\` substrings — searches name + note |
| \`actionWithinFocus\` | \`string[]\` of project / folder IDs — restrict to descendants |

Wrap a single atom in \`{ disabledRule: <atom> }\` to keep it in the tree but skip it during evaluation (useful when the user asks to toggle a constraint on/off).

### Common patterns

- **Available + flagged** (high-priority "actionable now" view):
  \`\`\`json
  { "aggregation": "all", "rules": [{ "actionAvailability": "available" }, { "actionStatus": "flagged" }] }
  \`\`\`
- **Inbox-only**:
  \`\`\`json
  { "aggregation": "all", "rules": [{ "actionHasNoProject": true }] }
  \`\`\`
- **At-home-or-phone, no due date, available** (the ticket's example shape):
  \`\`\`json
  {
    "aggregation": "all",
    "rules": [
      { "actionAvailability": "available" },
      { "actionHasAnyOfTags": ["<home-tag-id>", "<phone-tag-id>"] }
    ]
  }
  \`\`\`
  Resolve the tag IDs via \`tag_list\` first if you don't have them.

## 2. Preview via dry-run

Call \`perspective_evaluate_dry_run({ aggregation, rules })\` with the proposed tree. Report the count of matched tasks and 3–5 sample names. **Do not advance to step 3 if:**
- The count is 0 (the rules don't match anything — re-propose, don't save an empty view).
- The count is suspiciously broad (e.g. > 100 when the user asked for "today's actionable tasks") — re-propose with tighter constraints.

Show the agent-friendly summary inline; the user can read the count and decide.

## 3. Save on user confirm

After the user confirms the preview matches their intent, call:

\`\`\`
perspective_create({ name: "<name>", aggregation: "<all|any|none>", rules: [...] })
\`\`\`

The \`rules\` value is the same tree you passed to \`perspective_evaluate_dry_run\` — pass it verbatim, no re-validation needed. \`perspective_create\` returns \`{ id }\`; surface that id to the user so they can reference it later (\`perspective_evaluate({ perspectiveId: "<id>" })\`).

After save, call \`perspective_list\` to confirm the new perspective is visible. Report the resulting count + name + id.

## Failure modes

- **OF Pro required.** Custom perspectives need OmniFocus Pro. \`perspective_evaluate_dry_run\` and \`perspective_create\` both return \`OF_FEATURE_REQUIRES_PRO\` on Standard. Surface that to the user — they cannot save a perspective without upgrading.
- **Duplicate name.** \`perspective_create\` rejects duplicate names with a typed validation error. Either ask the user for a different name or append a disambiguator (e.g. \` - 2\`).
- **Don't save without a name.** If the user did not supply a name, ask for one before step 3 — don't invent one.

Read-only verification first; mutation only on explicit user approval."
`;

exports[`project-planning prompt > message with folderId matches snapshot 1`] = `
"You are setting up a new OmniFocus project. Follow these steps:

1. **Create the project** — call \`project_create\` with:
   - \`name\`: \`Website Redesign\`
   - \`folderId\`: \`folder_xyz\`
   - \`note\`: the brief below, verbatim, as the project note.

2. **Decompose the brief into subtasks** — read the brief carefully and derive a set of
   concrete, actionable tasks that together achieve the project goal. Aim for 5–15 tasks.
   Each task should be completable in ≤ 1 day. Use dependency order where it matters.

3. **Create the tasks** — for each derived task, call \`task_create\` with:
   - \`name\`: clear imperative title.
   - \`projectId\`: the ID returned by \`project_create\` in step 1.
   - \`note\`: any relevant detail or acceptance criterion.
   - \`dueDate\` / \`deferDate\`: only if meaningfully implied by the brief.
   - If \`task_batch_create\` is available, use it to create all tasks in one call.

4. **Confirm** — list the project name and all created task names.

---
### Project brief

Redesign the company website to improve conversion."
`;

exports[`project-planning prompt > message without folderId matches snapshot 1`] = `
"You are setting up a new OmniFocus project. Follow these steps:

1. **Create the project** — call \`project_create\` with:
   - \`name\`: \`Website Redesign\`
   - No folder (top-level project)
   - \`note\`: the brief below, verbatim, as the project note.

2. **Decompose the brief into subtasks** — read the brief carefully and derive a set of
   concrete, actionable tasks that together achieve the project goal. Aim for 5–15 tasks.
   Each task should be completable in ≤ 1 day. Use dependency order where it matters.

3. **Create the tasks** — for each derived task, call \`task_create\` with:
   - \`name\`: clear imperative title.
   - \`projectId\`: the ID returned by \`project_create\` in step 1.
   - \`note\`: any relevant detail or acceptance criterion.
   - \`dueDate\` / \`deferDate\`: only if meaningfully implied by the brief.
   - If \`task_batch_create\` is available, use it to create all tasks in one call.

4. **Confirm** — list the project name and all created task names.

---
### Project brief

Redesign the company website to improve conversion."
`;

exports[`weekly-review prompt > message text matches snapshot 1`] = `
"You are running a weekly OmniFocus review. Follow these steps in order:

1. **Load review queue** — read \`omnifocus://review-due\` (projects whose review date has
   arrived, sorted by nextReviewDate ascending). If the list is empty, report "No projects
   due for review — you are up to date." and stop.

2. **For each project** in the review queue:
   a. Load the project's tasks: \`omnifocus://project/{id}\`.
   b. Check for stale tasks (no dueDate, no deferDate, untouched for > 2 weeks):
      flag them with a note or drop them if clearly irrelevant.
   c. Check whether the project is still active. If complete or abandoned, call
      \`project_complete\` or \`project_drop\`.
   d. If the project is healthy, call \`project_mark_reviewed\` to advance its
      next-review date.

3. **Capture new commitments** — if any stray tasks surfaced during review that belong to
   a project, call \`task_update\` to assign them.

4. **Report** — summarise: how many projects reviewed, how many marked complete/dropped,
   how many tasks rescheduled or cleaned up."
`;
